# devtoolkit

./: README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs
src-tauri/src/commands/: mod.rs
src/__tests__/: more-utilities.test.ts  stores.test.ts  tools-registry.test.ts  utilities.test.ts
src/components/common/: InputPanel.vue  LoadingOverlay.vue  OutputPanel.vue  ToolIcon.vue
src/components/editor/: MonacoEditor.vue
src/components/shell/: AppShell.vue  SearchBar.vue  SideNav.vue  StatusBar.vue  ToolGrid.vue  ToolLayout.vue  ToolToolbar.vue
src/composables/: useLocalizedTool.ts
src/data/: tools-registry.ts
src/locales/: en.json  zh-CN.json
src/router/: index.ts
src/stores/: app.ts  tools.ts
src/styles/: variables.css
src/types/: index.ts
src/utils/: ai-decode-analyzer.ts  endecode-lib.ts  he.ts  json-abc.ts  json-bigint.ts  json-decode.ts  json-lint.ts  json-utils.ts  md5.ts  qr-content-utils.ts  table-utils.ts
src/views/: HomeView.vue  SettingsView.vue
src/views/tools/: ByteUnit.vue  ChartMaker.vue  CodeBeautify.vue  CodeCompress.vue  ColorPicker.vue  Crontab.vue  DateCalc.vue  DevTools.vue  DynamicInject.vue  EnDecode.vue  Excel2Json.vue  GridRuler.vue  Html2Markdown.vue  ImageBase64.vue  (+21 more)
src/workers/: json-worker.ts  monaco-setup.ts
